MySlider/css/style.css
@import url("https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300");

:root {
  --background: #282928;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  background: var(--background);
  font-family: "Open Sans Condensed", sans-serif;
  font-weight: 400;
}

.winner-pop-up {
  /* padding-top: 200px;
  position: relative; */
  display: none;
  position: fixed;
  bottom: 50vh;
  right: 50%;
  border: 3px solid #f1f1f1;
  z-index: 9999;
  border: 2px solid pink;
  background: white;
}

.memory-game-body {
  display: flex;
  height: 100%;
  background: #f1f1f1;
  padding-bottom: 3%;
  padding-top: 3%;
  width: 100%;
  height: 640px;
}

.memory-game {
  width: 540px;
  height: 540px;
  margin: auto;
  display: flex;
  flex-wrap: wrap;
  perspective: 1000px;
}

.memory-card {
  width: calc(25% - 10px);
  height: calc(33.333% - 10px);
  position: relative;
  margin: 5px;
  transform: scale(1);
  transform-style: preserve-3d;
  transition: transform 0.2s;
  border: 1px solid light-grey;
  background: white;
  box-shadow: 0 1px 4px 1px #999;
  border-radius: 1px;
  display: block;
  opacity: 1;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
  transition: 0.7s;
  -webkit-transition: 0.7s;
}

.memory-card:active {
  transform: scale(0.97);
  transition: transform 0.5s;
}

.memory-card.flip {
  transform: rotateY(180deg);
}

.memory-card.flip.grow {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 350px;
  height: 500px;
  margin-top: -250px;
  margin-left: -175px;
}

.front-face,
.back-face {
  width: 100%;
  height: 100%;
  position: absolute;
  backface-visibility: hidden;
}

.front-face {
  transform: rotateY(180deg);
  backface-visibility: hidden;
}

.back-face {
  height: 35%;
  width: 50%;
  left: 30%;
  top: 30%;
}

.circle {
  position: absolute;
  height: 60px;
  width: 60px;
  background: var(--background);
  border-radius: 50%;
  display: inline-block;
  left: 29%;
  top: 32%;
  backface-visibility: hidden;
}

.matched-memory-card {
  position: relative;
  display: none;
}

.matched-front-face {
  height: 75vh;
  bottom: 50vh;
  right: 50%;
  padding: 2vh 0px 10px 40vw;
}

.navbar {
  background: var(--background);
  text-align: center;
  position: absolute;
  z-index: 999;
  width: 100%;
  height: 80px;
  opacity: 0.8;
}

.sticky {
  position: fixed;
  top: 0;
  width: 100%;
}

.nav-toggle {
  position: absolute !important;
  top: -9999px !important;
  left: -9999px !important;
}

.nav-toggle:focus ~ .nav-toggle-label {
  outline: 3px solid rgba(lightblue, 0.75);
}

.nav-toggle-label {
  position: absolute;
  top: 0;
  left: 0;
  margin-left: 1em;
  height: 100%;
  display: flex;
  align-items: center;
}

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after {
  display: block;
  background: #a3a3a3;
  height: 2px;
  width: 2em;
  border-radius: 2px;
  position: relative;
}

.nav-toggle-label span::before,
.nav-toggle-label span::after {
  content: "";
  position: absolute;
}

.nav-toggle-label span::before {
  bottom: 7px;
}

.nav-toggle-label span::after {
  top: 7px;
}

.logo {
  grid-column: 2/3;
  width: 90px;
}

nav {
  position: absolute;
  text-align: left;
  top: 100%;
  left: 0;
  background: var(--background);
  width: 100%;
  transform: scale(1, 0);
  transform-origin: top;
  transition: transform 400ms ease-in-out;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

nav li {
  margin-bottom: 1em;
  margin-left: 1em;
}

nav a {
  color: #a3a3a3;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 17px;
  opacity: 0;
  transition: opacity 150ms ease-in-out;
}

nav a:hover {
  color: #dbfd11;
}

.nav-toggle:checked ~ nav {
  transform: scale(1, 1);
}

.nav-toggle:checked ~ nav a {
  opacity: 1;
  transition: opacity 250ms ease-in-out 250ms;
}

@media screen and (min-width: 800px) {
  .nav-toggle-label {
    display: none;
  }

  .navbar {
    opacity: 0.8;
    display: grid;
    grid-template-columns: 1fr auto minmax(600px, 4fr) 1fr;
  }

  .logo {
    grid-column: 2/3;
    width: 90px;
  }

  nav {
    position: relative;
    text-align: left;
    transition: none;
    transform: scale(1, 1);
    background: none;
    top: initial;
    left: initial;
    grid-column: 3/4;
    display: flex;
    justify-content: flex-end;
    align-items: center;
  }

  nav ul {
    display: flex;
  }

  nav li {
    margin-left: 3em;
    margin-bottom: 0;
  }
  nav a {
    opacity: 1;
    position: relative;
  }

  nav a::before {
    content: "";
    display: block;
    height: 1px;
    background-color: #a3a3a3;
    position: absolute;
    top: -1em;
    left: 0;
    right: 0;
    transform: scale(0, 1);
    transition: all ease-in-out 250ms;
  }

  nav a:hover::before {
    transform: scale(1, 1);
  }
}

.intro {
  background: white;
  color: #191919;
  padding: 100px 10vw 30px 10vw;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.nutshell {
  width: 20vh;
}

.about-me {
  background: #a3a3a3;
  display: grid;
  grid-template-columns: 6vw 1fr 1fr 1fr 6vw;
  grid-column-start: 2;
  grid-column-gap: 4vw;
}
#col1 {
  grid-column: 2 / 3;
}

.carousel {
  position: relative;
  height: 400px;
  width: 80%;
  margin: 0 auto;
}

.carousel__image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.carousel__track-container {
  height: 100%;
  position: relative;
  overflow: hidden;
}

.carousel__track {
  margin-top: 10px;
  list-style: none;
  position: relative;
  height: 100%;
  transition: transform 250ms ease-in;
}

.carousel__slide {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
}

.carousel__button {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background: transparent;
  border: 0;
  cursor: pointer;
  outline: none;
}

.carousel__button--left {
  left: -40px;
}

.carousel__button--right {
  right: -40px;
}

.carousel__button--pause {
  right: -39px;
  top: 63%;
}

.carousel__button--play {
  right: -39px;
  top: 57%;
}

.carousel__button img {
  width: 22px;
}

.carousel__nav {
  display: flex;
  justify-content: center;
  padding: 10px 0;
}

.carousel__indicator {
  border: 0;
  border-radius: 50%;
  width: 15px;
  height: 15px;
  background: rgb(0, 0, 0, 0.3);
  margin: 0 12px;
  cursor: pointer;
}

.carousel__indicator.current-slide {
  background: rgba(0, 0, 0.75);
}

// maybe do not use case of autoloop

.is-hidden {
  display: none;
}

